manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: webhttptest 
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1 
    spec:
      containers:
        - name: podinfo 
          image: stefanprodan/podinfo:latest
          ports:
          - containerPort: 9898
