manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: app1
    namespace: app1
spec:
    type: clusterIP
    ports:
    - port: 80 
    selector:
        app: app1
