manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  namespace: app1
  annotations:
#    ingress.kubernetes.io/rewrite-target: /$1
#    ingress.kubernetes.io/use-regex: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      #- path: /app1/(.*)
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 80
